--- a/src/app/@theme/styles/styles.scss
+++ b/src/app/@theme/styles/styles.scss
@@ -22,7 +22,7 @@
 
   // fixed in rc.9 and can be removed after upgrade
   .custom-control .custom-control-indicator {
-    border-radius: 50%; // TODO: quickfix for https://github.com/akveo/nebular/issues/275
+    border-radius: 50%;
   }
   @include bootstrap-rtl();
 };
