--- a/src/app/@theme/components/footer/footer.component.scss
+++ b/src/app/@theme/components/footer/footer.component.scss
@@ -1,6 +1,16 @@
 @import '../../styles/themes';
 @import '~@nebular/theme/styles/global/bootstrap/breakpoints';
 @import '~bootstrap/scss/mixins/breakpoints';
+@import '../../../@theme/styles/themes';
+
+:host {
+
+  background: #FF9933; // and use it
+  box-shadow: 0 0 1px 0 rgba(115, 255, 208, 0);
+  border-radius: 10px 10px 10px 10px;
+  color:#2a2a2a;
+  padding-left: 15px;
+}
 
 @include nb-install-component() {
   width: 100%;
